# glance

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  justfile
apps/hackernews/: README.md  bun.lockb  index.ts  initdb.sql  package.json  promptbox.toml  summarize-comments.pb.toml  summarize-page.pb.toml
apps/weather/: README.md  bun.lockb  index.ts  package.json
dev-utils/: Cargo.toml
platform/app-js/: package.json
platform/app-js/src/: app_data.ts
platform/app-rust/: Cargo.toml
platform/app-rust/src/: app_data.rs  lib.rs
platform/core/: Cargo.toml  build.rs
platform/core/filigree/: config.toml
platform/core/filigree/.state/: schema.sql.gen
platform/core/filigree/.state/api/src/: db.rs.gen  main.rs.gen
platform/core/filigree/.state/api/src/cmd/db/: bootstrap.rs.gen
platform/core/filigree/.state/api/src/emails/: passwordless_login.rs.gen
platform/core/filigree/.state/api/src/models/organization/: endpoints.rs.gen  queries.rs.gen  select_one.sql.gen  update.sql.gen
platform/core/filigree/.state/api/src/models/role/: endpoints.rs.gen  select_one.sql.gen  testing.rs.gen  types.rs.gen
platform/core/filigree/.state/api/src/models/user/: endpoints.rs.gen  insert.sql.gen  select_one.sql.gen  update.sql.gen
platform/core/filigree/.state/api/src/server/: mod.rs.gen
platform/core/filigree/.state/api/src/tests/: mod.rs.gen
platform/core/filigree/.state/api/src/users/: create_user.sql.gen  organization.rs.gen  users.rs.gen
platform/core/filigree/.state/web/src/: hooks.client.ts.gen  hooks.server.ts.gen
platform/core/filigree/.state/web/src/lib/models/: user.ts.gen
platform/core/filigree/.state/web/src/routes/login/: +page.server.ts.gen
platform/core/migrations/: 20231121080509_init.down.sql  20231121080509_init.up.sql  20231202010620_state_key.down.sql  20231202010620_state_key.up.sql  20240729215348_app_metadata_version.down.sql  20240729215348_app_metadata_version.up.sql
platform/core/src/: add_event.sql  api.rs  create_or_update_app.sql  create_or_update_item.sql  db.rs  error.rs  fs_source.rs  get_active_items.sql  get_active_items.sql.liquid  get_active_items.sql.tera  get_apps.sql  get_items.partial.sql.liquid  get_items.partial.sql.tera  get_items_by_app_id.sql  get_items_by_app_id.sql.liquid  get_items_by_app_id.sql.tera  handle_changes.rs  items.rs  lib.rs  main.rs  remove_app.sql  remove_unfound_items.sql  scheduled_task.rs  tracing_config.rs
platform/core/src/auth/: mod.rs  password_management.rs  passwordless_login.rs  permissions.rs
platform/core/src/cmd/: db.rs  util.rs
platform/core/src/cmd/db/: bootstrap.rs
platform/core/src/emails/: password_reset_request.rs
platform/core/src/emails/templates/: transactional_base.html  transactional_base.txt
platform/core/src/models/: mod.rs
platform/core/src/models/organization/: delete.sql  insert.sql  list.sql  testing.rs  types.rs
platform/core/src/models/role/: delete.sql  insert.sql  list.sql  queries.rs  update.sql
platform/core/src/models/user/: delete.sql  endpoints.rs  list.sql  queries.rs  testing.rs  types.rs
platform/core/src/server/: error.rs  mod.rs  panic_handler.rs  routes.rs
platform/core/src/server/routes/: app.rs  items.rs
platform/core/src/tests/: mod.rs
platform/core/src/users/: organization.rs  users.rs
platform/glance-app-js/: package.json
platform/glance-app-js/src/: app_data.ts  index.ts
platform/glance-app-rust/: Cargo.toml
platform/glance-app-rust/src/: app_data.rs  lib.rs
platform/glance-core/: Cargo.toml
platform/glance-core/src/: db.rs  error.rs  fs_source.rs  items.rs  lib.rs
platform/glance-core/src/db/: migrations.rs
platform/glance-core/src/db/migrations/: 00001_initial.sql
platform/glance-types-js/: package.json  pnpm-lock.yaml  tsconfig.json
platform/glance-types-js/src/: app_data.ts  index.ts
platform/glance-types-rust/: Cargo.toml
platform/glance-types-rust/src/: app_data.rs  lib.rs
platform/web/: .eslintrc.cjs  .prettierrc  components.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
platform/web/src/: app.d.ts  app.pcss  hooks.client.ts  hooks.server.ts
platform/web/src/lib/: apiClient.ts  api_types.ts  auto_id.ts  theme.ts
platform/web/src/lib/components/: DarkModeSwitch.svelte  OAuthLoginButton.svelte  SideLabelled.svelte  TopLabelled.svelte
platform/web/src/lib/components/ui/button/: button.svelte
platform/web/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
platform/web/src/lib/components/ui/label/: label.svelte
platform/web/src/lib/components/ui/switch/: switch.svelte
platform/web/src/lib/models/: organization.ts  role.ts
platform/web/src/lib/server/: user.ts
platform/web/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  +page.ts
platform/web/src/routes/auth/oauth/login/[provider]/callback/: +server.ts
platform/web/src/routes/login/: +page.server.ts  +page.svelte
platform/web/src/routes/logout/: +page.server.ts
schema/: app_data.json
