[workspace]
resolver = "2"
members = [
    "dev-utils",
    "platform/core",
    "platform/app-rust"
]

# [patch.crates-io]
# sqlx-transparent-json-decode = { path = "../sqlx-transparent-json-decode", features = ["schemars", "serde"] }

[workspace.lints.rust]
missing_docs = "warn"

[profile.release]
debug = 1

[profile.dev.package.sqlx-macros]
opt-level = 3
