[package]
name = "glance-dev-utils"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glance-app = { path = "../platform/app-rust", features = ["json-schema"] }
schemars = "0.8.16"
serde_json = "1.0.108"
