[package]
name = "glance-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
dirs = "5.0.1"
schemars = { version = "0.8.16", optional = true, features = ["chrono", "raw_value"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["raw_value"] }
sqlx = { version = "0.7.3", optional = true, features = ["runtime-tokio", "tls-rustls"] }
sqlx-transparent-json-decode = { version = "2.0.1", features = ["schemars", "serde"] }
uuid = { version = "1.5.0", features = ["serde"] }

[features]
default = []
sqlx = ["dep:sqlx"]
json-schema = ["dep:schemars"]
