[package]
name = "glance-core"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-auth = "0.4.1"
axum-extra = { version = "0.8.0", features = ["typed-routing", "form"] }
axum-tracing-opentelemetry = "0.14.1"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.8", features = ["derive", "env"] }
error-stack = { version = "0.4.1", features = ["eyre"] }
flume = { version = "0.11.0" }
futures = "0.3.29"
glance-app = { path = "../app-rust", features = ["sqlx"] }
hyper = "^0.14"
itertools = "0.11.0"
notify-debouncer-mini = { version = "0.4.1", optional = true }
opentelemetry-otlp = "0.14.0"
opentelemetry = { version= "0.21.0" }
opentelemetry_sdk = { version= "0.21.1", features = [ "rt-tokio-current-thread" ] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "chrono", "tls-rustls"] }
sqlx-transparent-json-decode = { version = "2.1.0", features = ["serde"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full", "tracing"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["util", "catch-panic", "request-id", "trace", "limit", "compression-deflate", "compression-gzip", "compression-zstd", "decompression-full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-honeycomb = "0.4.3"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.3.0"
tonic = "0.9.2"
opentelemetry-jaeger = { version = "0.20.0", features = [ "rt-tokio-current-thread" ]}
log = "0.4.20"
dotenvy = "0.15.7"

[features]
default = ["fs-source"]
fs-source = ["dep:notify-debouncer-mini"]
