[package]
name = "glance-core"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.75"
axum = { version = "0.7.3", features = ["tokio", "http1", "http2", "macros"] }
axum-extra = { version = "0.9.2", features = ["typed-routing", "form", "query"] }
axum-jsonschema = "0.8.0"
bytes = "1.5.0"
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive", "env"] }
dialoguer = "0.11.0"
dotenvy = "0.15.7"
effectum = "0.7.0"
error-stack = { version = "0.4.1", features = ["eyre", "spantrace"] }
eyre = "0.6.11"
filigree = { version = "0.4.0", path = "../../../filigree/filigree", features = ["resend", "sentry"] }
flume = { version = "0.11.0" }
futures = "0.3.30"
glance-app = { path = "../app-rust", features = ["sqlx"] }
http = "1.0.0"
hyper = { version = "1.1.0", features = ["server", "http1", "http2"] }
itertools = "0.11.0"
log = "0.4.20"
notify-debouncer-mini = { version = "0.4.1", optional = true }
opentelemetry = { version= "0.21.0" }
opentelemetry-jaeger = { version = "0.20.0", features = [ "rt-tokio-current-thread" ]}
opentelemetry-otlp = "0.14.0"
opentelemetry_sdk = { version= "0.21.1", features = [ "rt-tokio-current-thread" ] }
percent-encoding = "2.3.1"
reqwest = { version = "0.11.23", features = ["cookies", "json"] }
rust-embed = "8.1.0"
schemars = { version = "0.8.16", features = ["chrono", "url", "uuid1"] }
schemars-zod = "0.1.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.113"
serde_with = { version = "3.6.1", features = ["json", "schemars_0_8"] }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "chrono", "tls-rustls", "runtime-tokio-rustls"] }
sqlx-transparent-json-decode = { version = "3.0.0", features = ["serde"] }
tera = "1.19.1"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tonic = "0.9.2"
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.1", features = ["util", "catch-panic", "request-id", "trace", "limit", "compression-deflate", "compression-gzip", "compression-zstd", "decompression-full", "full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-honeycomb = "0.4.3"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
tracing-tree = "0.3.0"
url = "2.5.0"
uuid = "1.6.1"

[features]
default = ["fs-source"]
fs-source = ["dep:notify-debouncer-mini"]

[dev-dependencies]
temp-dir = "0.1.13"
tempfile = "3.9.0"
