[package]
name = "glance-core"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["serde_json", "uuid"] }
rusqlite_migration = "1.0.2"
glance-app = { path = "../glance-app-rust" }
