[package]
name = "glance-core"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
effectum = "0.3.0"
error-stack = { version = "0.4.1", features = ["eyre"] }
flume = { version = "0.11.0", default-features = false }
glance-app = { path = "../glance-app-rust" }
notify-debouncer-mini = { version = "0.4.1", optional = true }
rusqlite = { version = "0.29.0", features = ["serde_json", "uuid"] }
rusqlite_migration = "1.0.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

[features]
default = ["fs-source"]
fs-source = ["notify-debouncer-mini"]
